cmake_minimum_required(VERSION 3.29)
project(untitled1 C)

set(CMAKE_C_STANDARD 17)

add_executable(untitled1 main.c)
add_executable(Ejercicio_4 Ejercicio_4.c)
add_executable(Ejercicio_5 Ejercicio_5.c)
add_executable(Ejemplo_For_Anidados Ejemplo_For_Anidados.c)
add_executable(Piramide Ejercicio_piramide.c)
add_executable(Ejercicios_piramide Ejercicio_piramide_2.c)
add_executable(Pruebas Pruebas.c)